Added UI Elements

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Платформа психолога</p>
+            <p>&copy; 2025 Платформа педагога-психолога</p>
+            <p>Московский университет имени С.Ю. Витте</p>
         </div>
     </footer>
 
