--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">👥</div>
-                <h3>Разделение ролей</h3>
-                <p>Четкое разделение прав доступа для пользователей, психологов и администраторов</p>
+                <h3>Индивидуальный подход</h3>
+                <p>Персональная работа с каждым студентом и индивидуальный подбор методов консультирования</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">💬</div>
