--- a/static/css/style.css
+++ b/static/css/style.css
@@ -241,7 +241,7 @@ footer {
     color: white;
     text-align: center;
     padding: 2rem 0;
-    margin-top: 3rem;
+    margin-top: 0;
 }
 
 footer p {
