--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             <div class="step">
                 <div class="step-number">1</div>
                 <h3>Регистрация</h3>
-                <p>Создайте аккаунт на платформе, выбрав свою роль</p>
+                <p>Создайте аккаунт на платформе</p>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
