--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             <div class="container">
                 <a href="/" class="logo">Платформа психолога</a>
                 <div class="nav-links">
+                    <a href="{% url 'about' %}">О нас</a>
                     {% if user.is_authenticated %}
                         <a href="/dashboard">Панель управления</a>
                         <a href="/logout">Выход</a>
