--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
         <nav>
             <div class="container">
                 <a href="/" class="logo">Платформа психолога</a>
+                <a href="{% url 'about' %}" class="nav-center">О нас</a>
                 <div class="nav-links">
-                    <a href="{% url 'about' %}">О нас</a>
                     {% if user.is_authenticated %}
                         <a href="/dashboard">Панель управления</a>
                         <a href="/logout">Выход</a>
