--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,10 @@
         <nav>
             <div class="container">
                 <a href="/" class="logo">Платформа психолога</a>
-                <a href="{% url 'about' %}" class="nav-center">О нас</a>
+                <div class="nav-center-links">
+                    <a href="{% url 'about' %}">О нас</a>
+                    <a href="{% url 'faq' %}">FAQ</a>
+                </div>
                 <div class="nav-links">
                     {% if user.is_authenticated %}
                         <a href="/dashboard">Панель управления</a>
