--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
                 <div class="nav-center-links">
                     <a href="{% url 'about' %}">О нас</a>
                     <a href="{% url 'faq' %}">FAQ</a>
+                    <a href="{% url 'contacts' %}">Контакты</a>
                 </div>
                 <div class="nav-links">
                     {% if user.is_authenticated %}
