--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -12,31 +12,28 @@
 
 <section class="contacts-info">
     <div class="section-content">
-        <div class="contacts-grid">
-            <div class="contact-block">
-                <h3>Адрес</h3>
-                <p>2-й Кожуховский проезд, Москва, Россия</p>
+        <div class="contacts-wrapper">
+            <div class="contacts-grid">
+                <div class="contact-block">
+                    <h3>Адрес</h3>
+                    <p>2-й Кожуховский проезд, Москва, Россия</p>
+                </div>
+                <div class="contact-block">
+                    <h3>Телефон</h3>
+                    <p>+7 (495) 123-45-67</p>
+                </div>
+                <div class="contact-block">
+                    <h3>Email</h3>
+                    <p>psychology@witte-university.ru</p>
+                </div>
+                <div class="contact-block">
+                    <h3>Часы работы</h3>
+                    <p>Пн-Пт: 9:00 - 18:00<br>Сб-Вс: Выходной</p>
+                </div>
             </div>
-            <div class="contact-block">
-                <h3>Телефон</h3>
-                <p>+7 (495) 123-45-67</p>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15120.641118896838!2d37.65627018573483!3d55.71164274250781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab4caf9faf987%3A0xbfd80e63b2dea40f!2s2-Y%20Kozhukhovskiy%20Proyezd%2C%20Moskva%2C%20Russia!5e0!3m2!1sen!2saz!4v1764412880585!5m2!1sen!2saz" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="contact-block">
-                <h3>Email</h3>
-                <p>psychology@witte-university.ru</p>
-            </div>
-            <div class="contact-block">
-                <h3>Часы работы</h3>
-                <p>Пн-Пт: 9:00 - 18:00<br>Сб-Вс: Выходной</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="contacts-map">
-    <div class="section-content">
-        <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15120.641118896838!2d37.65627018573483!3d55.71164274250781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab4caf9faf987%3A0xbfd80e63b2dea40f!2s2-Y%20Kozhukhovskiy%20Proyezd%2C%20Moskva%2C%20Russia!5e0!3m2!1sen!2saz!4v1764412880585!5m2!1sen!2saz" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </section>
