Created Services page

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
                 <a href="/" class="logo">Платформа психолога</a>
                 <div class="nav-center-links">
                     <a href="{% url 'about' %}">О нас</a>
+                    <a href="{% url 'services' %}">Услуги</a>
                     <a href="{% url 'faq' %}">FAQ</a>
                     <a href="{% url 'contacts' %}">Контакты</a>
                 </div>
