--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,9 @@
                 <div class="nav-center-links">
                     <a href="{% url 'about' %}">О нас</a>
                     <a href="{% url 'services' %}">Услуги</a>
-                    <a href="{% url 'support' %}">Поддержка</a>
+                    <a href="{% url 'support' %}">Мотивация</a>
                     <a href="{% url 'faq' %}">FAQ</a>
+                    <a href="{% url 'feedback' %}">Обратная связь</a>
                     <a href="{% url 'contacts' %}">Контакты</a>
                 </div>
                 <div class="nav-links">
