--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                                 <a href="/dashboard" class="dropdown-item">
                                     Панель управления
                                 </a>
-                                <a href="/profile" class="dropdown-item">
+                                <a href="{% url 'profile' %}" class="dropdown-item">
                                     Профиль
                                 </a>
                                 <a href="/application/create" class="dropdown-item">
