Created views for student dashboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             </div>
         {% else %}
             <div class="hero-buttons">
-                <a href="/dashboard" class="btn btn-primary">Перейти в панель управления</a>
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">Перейти в панель управления</a>
             </div>
         {% endif %}
     </div>
