--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,13 @@
                                 <span class="user-menu-arrow">▼</span>
                             </button>
                             <div class="user-menu-dropdown" id="userMenuDropdown">
-                                <a href="/dashboard" class="dropdown-item">
+                                <a href="{% url 'dashboard' %}" class="dropdown-item">
                                     Панель управления
                                 </a>
                                 <a href="{% url 'profile' %}" class="dropdown-item">
                                     Профиль
                                 </a>
-                                <a href="/application/create" class="dropdown-item">
+                                <a href="{% url 'application_create' %}" class="dropdown-item">
                                     Подать заявку
                                 </a>
                                 <div class="dropdown-divider"></div>
